--- a/development/index.haml
+++ b/development/index.haml
@@ -20,10 +20,13 @@
 	%link{:href => "assets/bower_components/normalize-css/normalize.css", :rel => "stylesheet", :type => 'text/css'}/
 	%link{:href => "assets/css/styles.css", :rel => "stylesheet", :type => 'text/css'}/
 
-	/ Libs
-	%script{:src => "assets/js/modernizr.custom.02435.min.js"}
-	%script{:src => "assets/js/jquery-2.1.0.min.js"}
-	%script{:src => "assets/js/jquery-migrate-1.2.1.min.js"}
+	%script{:src => "assets/js/plugins.min.js"}
+
+	/
+		Libs
+		%script{:src => "assets/js/modernizr.custom.02435.min.js"}
+		%script{:src => "assets/js/jquery-2.1.0.min.js"}
+		%script{:src => "assets/js/jquery-migrate-1.2.1.min.js"}
 
 	/
 		CDN
