--- a/development/index.haml
+++ b/development/index.haml
@@ -11,7 +11,7 @@
 	%meta{:"http-equiv" => "imagetoolbar", :content => "false"}/
 	%meta{:name => "SKYPE_TOOLBAR", :content => "SKYPE_TOOLBAR_PARSER_COMPATIBLE"}/
 
-	%title Simple Template Layout
+	%title Simple Template Layouts
 
 	/ Fonts
 	%link{:href => "http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic&subset=latin,cyrillic-ext,latin-ext,cyrillic", :rel => 'stylesheet', :type => 'text/css'}/
@@ -39,7 +39,7 @@
 	%script
 %body
 	#container
-		%h1 Simple Template Layout
+		%h1 Simple Template Layouts
 		%p Project based on HAML, SCSS
 		%p
 			Version: 0.0.7
