--- a/development/index.haml
+++ b/development/index.haml
@@ -14,7 +14,7 @@
   %title Simple Template Layouts
 
   / Fonts
-  %link{:href => "http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic&subset=latin,cyrillic-ext,latin-ext,cyrillic", :rel => 'stylesheet', :type => 'text/css'}/
+  %link{:href => "http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic", :rel => 'stylesheet', :type => 'text/css'}/
 
   / Styles
   %link{:href => "assets/bower_components/normalize-css/normalize.css", :rel => "stylesheet", :type => 'text/css'}/
@@ -39,7 +39,7 @@
   %script
 %body
   #container
-    %h1 Simple Template Layouts
+    %h1 Simple Template Layouts Жора
     %p Project based on HAML, SCSS
     %p
       Version: 0.0.7
