--- a/development/assets/scss/elements/_base.scss
+++ b/development/assets/scss/elements/_base.scss
@@ -1,30 +1,24 @@
 body {
-
   margin: 0; padding: 0;
   background: #fafafa;
   color: #333;
   font: 16px/1.5em "Droid Serif", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
-
 }
 
 h1, h2, h3, h4, h5, h6 {
-
   text-align: center;
   font-weight: normal;
-
 }
 
-p {
-
-  text-align: center;
-
-}
+p {}
 
 #container {
-
   margin: 20px auto; padding: 0 5%;
   width: 80%;
   max-width: 800px;
+}
 
+.text-center {
+  text-align: center;
 }
