--- a/development/assets/scss/elements/_buttons.scss
+++ b/development/assets/scss/elements/_buttons.scss
@@ -3,10 +3,10 @@
 .custom-button {
   position: relative;
   vertical-align: top;
-  width: 100%;
-  height: 60px;
+  width: auto;
+  height: 40px;
   padding: 0;
-  font-size: 22px;
+  font-size: 16px;
   color: white;
   text-align: center;
   border: 0;
