--- a/development/assets/scss/styles.scss
+++ b/development/assets/scss/styles.scss
@@ -1,13 +1,17 @@
 @charset "utf-8";
 
-@import "compass";
-@import "compass/css3/pie";
-@import "compass/css3/user-interface";
-
-@import "elements/base";
-@import "elements/form";
 @import "elements/colors";
-@import "elements/buttons";
+
+@import
+  "compass"
+, "compass/css3/pie"
+, "compass/css3/user-interface"
+
+, 'utilities/include'
+
+, "elements/base"
+, "elements/form"
+, "elements/buttons";
 
 
 
